--- a/config/database.yml
+++ b/config/database.yml
@@ -10,8 +10,11 @@ default: &default
   timeout: 5000
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+#  <<: *default
+#  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
