--- a/config/database.yml
+++ b/config/database.yml
@@ -5,13 +5,16 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
   pool: 5
   timeout: 5000
+  database: postgres
+  username: MeetMyClassmatesAdmin
+  password:
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: MeetMyClassmates_development
 #  adapter: postgresql
 #  encoding: unicode
 #  pool: 5
@@ -21,11 +24,8 @@ development:
 # Do not set this db to the same as development or production.
 test: &test
   <<: *default
-  database: db/test.sqlite3
+  database: MeetMyClassmates_test
 
 production:
   <<: *default
-  database: db/production.sqlite3
-
-cucumber:
-  <<: *test
+  database: MeetMyClassmates_production
